# dl-course

./: pyproject.toml
homework/micrograd/: engine.py  nn.py  optim.py  test_nn.ipynb
homework/micrograd/test/: test_engine.py
homework2/: classification_hw.ipynb  segmentation.ipynb  segmentation_hw.ipynb
