[tool.poetry]
name = "dl-course"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
torch = "^1.6.0"
pytest = "^6.0.2"
scikit-learn = "^0.23.2"
jupyter = "^1.0.0"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
tqdm = "^4.50.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
